2009-09-05  Martin Thuresson  <martin@mtme.org>

	* config/tc-arc.c (struct syntax_classes): Rename member class
	to s_class. (arc_extinst): Rename variable class to
	s_class. Update code to use renamed members.
	* config/tc-mips.c (insn_uses_reg): Rename argument class to
	regclass.
	* config/tc-ppc.c (ppc_csect, ppc_change_csect, ppc_function)
	(ppc_tc, ppc_is_toc_sym, ppc_symbol_new_hook, ppc_frob_label)
	(ppc_fix_adjustable, md_apply_fix): Update code to use renamed
	members.
	* config/tc-ppc.h (struct ppc_tc_sy): Change name of member
	from class to symbol_class. (OBJ_COPY_SYMBOL_ATTRIBUTES): Update
	code to use renamed members.
	* config/tc-score.c (s3_adjust_paritybit): Rename argument
	class to i_class.
	* config/tc-score7.c (s7_adjust_paritybit): Rename argument
	class to i_class.

2009-09-04  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.20.

2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* config/bfin-parse.y (asm_1): Implement HLT instruction.
	Fix comments for DBGA, DBGAH and DBGAL.
	* config/tc-bfin.c (bfin_gen_pseudodbg_assert): Change according
	to the new encoding of DBGA, DBGAH, and DBGAL.

2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* doc/all.texi: Replace BFIN with Blackfin.
	* doc/as.texinfo: Likewise.
	* doc/c-bfin.texi: Likewise.
	* doc/asconfig.texi: Likewise.

	* doc/c-bfin.texi: Update -mcpu= option with bf512, bf514,
	bf516 and bf518.

2009-09-04  Jie Zhang  <jie.zhang@analog.com>

	* Makefile.am (bfin-parse.o): Remove bfin-parse.h from
	the prerequisite. Add $(srcdir)/config/bfin-aux.h to the
	prerequisite.
	(bfin-defs.h, $(srcdir)/config/bfin-defs.h): Rename to ...
	(bfin-parse.h, $(srcdir)/config/bfin-parse.h): ... these. 
	(bfin-lex.o): Add bfin-parse.h and $(srcdir)/config/bfin-defs.h
	to the prerequisite.
	* Makefile.in: Regenerate.

2009-09-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (itbl-lex.o): Depend on itbl-parse.h.
	(itbl-ops.o, itbl-tops.o): Likewise.